agrega sidenav para administrador

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -13,16 +13,22 @@
         alt="Logo"
     /></a>
   </mat-toolbar-row>
-  <mat-toolbar-row class="toolbar__container--menu">
-    <a mat-button [routerLink]="'/login'">Login</a>
-    <a mat-button>Logout</a>
-    <a mat-button [routerLink]="'/admin'">Admin</a>
-  </mat-toolbar-row>
+  <ng-container *ngIf="!isAdmin; else viewAdmin">
+    <mat-toolbar-row class="toolbar__container--menu">
+      <a mat-button [routerLink]="'/login'">Login</a>
+      <a mat-button>Logout</a>
+      <a mat-button [routerLink]="'/admin'">Admin</a>
+    </mat-toolbar-row>
+  </ng-container>
 
   <mat-toolbar-row>
     <button (click)="isAdmin = !isAdmin">Change</button>
   </mat-toolbar-row>
 </mat-toolbar>
+
+<button mat-icon-button (click)="onToggleSidenav()">
+  <mat-icon>menu</mat-icon>
+</button>
 
 <ng-template #viewAdmin>
   <button mat-icon-button (click)="onToggleSidenav()">
