--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,1 +1,34 @@
-<p>login works!</p>
+<div class="loginBG">
+  <div class="login__container--BG">
+    <form class="login__container">
+      <mat-form-field class="login__container--item" appearance="outline">
+        <mat-label>Usuario</mat-label>
+        <input
+          matInput
+          formControlName="username"
+          placeholder="Ingrese su Usuario"
+        />
+        <mat-icon [ngStyle]="{ color: 'white' }" matSuffix
+          >account_circle</mat-icon
+        >
+      </mat-form-field>
+
+      <mat-form-field class="login__container--item" appearance="outline">
+        <mat-label>Contraseña</mat-label>
+        <input
+          matInput
+          type="password"
+          formControlName="password"
+          placeholder="Ingrese su Contraseña"
+          minlength="8"
+        />
+        <mat-icon matSuffix>password</mat-icon>
+        <mat-hint> Mín 8 caracteres </mat-hint>
+      </mat-form-field>
+
+      <div class="login__container--btn">
+        <button mat-flat-button type="submit">Iniciar sesión</button>
+      </div>
+    </form>
+  </div>
+</div>
