--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,1 +1,4 @@
-<p>not-found works!</p>
+<div class="notFound">
+  <h2 id="e404">404</h2>
+  <h2>- ¡Algo salió mal! sitio no encontrado</h2>
+</div>
