--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -5,7 +5,7 @@
         Desk Monster
       </h1></a
     >
-    <a title="Desk Monster" href="#"
+    <a title="Desk Monster" href=""
       ><img
         class="toolbar__container--logo"
         src="../../../assets/images/DeskMonster.svg"
@@ -21,9 +21,8 @@
   </ng-container>
 
   <mat-toolbar-row class="toolbar__container--menu">
-    <a *ngIf="!isLogged; else viewLogout" mat-button routerLink="/login"
-      >Login</a
-    >
+    <a *ngIf="!isLogged; else viewLogout" mat-button routerLink="">Login</a>
+    <a *ngIf="!isLogged" mat-button routerLink="/register">Register</a>
 
     <a *ngIf="isAdmin == 'admin'" mat-button routerLink="/admin">Admin</a>
   </mat-toolbar-row>
