falta corregir bug mensajes

--- a/src/app/pages/home/components/compose/compose.component.html
+++ b/src/app/pages/home/components/compose/compose.component.html
@@ -1,22 +1,22 @@
-<div class="composeBG">
-  <div class="compose__container--BG compose__container">
+<div class="compose__container--BG">
+  <div class="compose__container">
     <h2 class="compose__text">Nuevo mensaje</h2>
     <form
       class="form__compose__container"
-      autocomplete="nope"
+      [formGroup]="composeForm"
       (ngSubmit)="onSubmit()"
     >
       <mat-form-field class="compose__container--item" appearance="outline">
-        <mat-label>Destinatario</mat-label>
-        <input
-          matInput
-          formControlName="destinatario"
-          placeholder="Ingrese su destinatario"
-        />
+        <mat-label>Dirección</mat-label>
+        <mat-select formControlName="destinatario">
+          <mat-option *ngFor="let array of arrayUsers" [value]="array">{{
+            array
+          }}</mat-option>
+        </mat-select>
       </mat-form-field>
 
       <mat-form-field class="compose__container--item" appearance="outline">
-        <mat-label>Mensaje</mat-label>
+        <mat-label class="label">Mensaje</mat-label>
         <textarea
           matInput
           formControlName="mensaje"
@@ -33,7 +33,7 @@
           type="submit"
           [disabled]="!composeForm.valid"
         >
-          Enviar mensaje
+          Enviar
         </button>
       </div>
     </form>
