--- a/src/app/pages/home/components/compose/compose.component.scss
+++ b/src/app/pages/home/components/compose/compose.component.scss
@@ -1,19 +1,15 @@
-.composeBG {
-  background-color: #08090d;
-  color: #ccc9dc;
-  background-image: url(./../../../../../assets/images/BGcompose.jpg);
+.compose__container--BG {
+  background-image: url(../../../../../assets/images/BGcompose.jpg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-height: 77.7vh;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: top;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
-
-.compose__container--BG {
-  margin: 3rem;
+.compose__container {
   background: rgba(33, 33, 33, 0.35);
   box-shadow: 0 8px 10px 0 rgba(33, 33, 33, 0.8);
   backdrop-filter: blur(5px);
@@ -21,11 +17,21 @@
   border-radius: 10px;
 }
 
+.compose__text {
+  text-align: center;
+}
+
 .compose__container {
   display: flex;
   flex-direction: column;
-  padding: 3rem;
+  margin: 1rem;
+  padding: 1rem;
   &--item {
     padding: 1rem;
+  }
+  &--btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
